IndexedDB: Null key path gets stored as empty string key path https://bugs.webkit.org/show_bug.cgi?id=68726

Patch by Joshua Bell <jsbell@chromium.org> on 2011-09-26
Reviewed by Tony Chang.

Store additional flag to indicate if object store key path
is null vs. empty. Added additional runtime tests for integrity
of object store metadata.

* storage/IDBLevelDBBackingStore.cpp:
(WebCore::checkObjectStoreAndMetaDataType):
(WebCore::IDBLevelDBBackingStore::getObjectStores):
(WebCore::IDBLevelDBBackingStore::createObjectStore):
* storage/IDBLevelDBCoding.cpp:

Canonical link: https://commits.webkit.org/84808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96007 268f45cc-cd09-0410-ab3c-d52691b4dbfc